--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,11 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+    adapter: mysql2
+    encoding: utf8
+    reconnect: false
+    database: siberrya_production
+    pool: 5
+    username: kdylko
+    password: 15Tikos@89
+    host: 134.0.118.203
